--- a/html/signup.html
+++ b/html/signup.html
@@ -5,7 +5,7 @@
 	    <meta charset="UTF-8">
 	   	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	   	<script src="https://kit.fontawesome.com/535811ad0c.js"></script>
-		<link rel="stylesheet" type="text/css" href="../project/main.min.css">
+		<link rel="stylesheet" type="text/css" href="../css/main.min.css">
 	</head>
 	<body>
 	    <header>
