--- a/html/azatutyun.am.html
+++ b/html/azatutyun.am.html
@@ -6,7 +6,7 @@
 	   	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<script src="https://kit.fontawesome.com/535811ad0c.js"></script>
 		<link rel="stylesheet" type="text/css" href="../css/main.min.css">
-
+        <script src="../JS/azatutyun.js"></script>
 	</head>
 	<body> 
 		<header>
@@ -103,24 +103,11 @@
 					</div>
             	    <!-- Dropdown in header end -->
             	<!-- Button with JS begin -->    
-				<a href="javascript:void(0);" class="icon" onclick="showHideNavbaroptions()">
+				<a href="javascript:void(0);" class="icon">
 				    <i class="fa fa-bars"></i>
 				</a>
             	</div>
-            	<script>
-					function showHideNavbaroptions() {
-					    var navbar_options = document.getElementById("myNavbar");
-					    var hidden = navbar_options.classList.contains("hidden_block");
-
-					    if (hidden) {
-					    	console.log('Show Navbar');
-					    	navbar_options.className = "navbar_items_hover responsive";
-					    } else {
-					        console.log("Hide Navbar");
-					    	navbar_options.className = "navbar_items_hover hidden_block";
-					    }
-					}
-				</script>
+            	
 				<!-- Button with JS end -->    
             </div>
             <!-- navbar links end -->
