js code in external file

--- a/html/azatutyun.am.html
+++ b/html/azatutyun.am.html
@@ -4,9 +4,8 @@
 		<title>Ազատություն ռ/կ</title>
 		<meta charset="UTF-8">
 	   	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<script src="https://kit.fontawesome.com/535811ad0c.js"></script>
+	    <script src="https://kit.fontawesome.com/535811ad0c.js"></script>
 		<link rel="stylesheet" type="text/css" href="../css/main.min.css">
-        <script src="../JS/azatutyun.js"></script>
 	</head>
 	<body> 
 		<header>
@@ -93,11 +92,11 @@
 						<div class="dropdown_float">
 							<ul class="none bck_color">
 								<li class="bck_color font_size">Ռադիոհաղորդումները<hr /></li>
-								<li class="bck_color"><a>ՌԱԴԻՈՀԱՂՈՐԴՈՒՄՆԵՐԻ ԺԱՄԱՆԱԿԱՑՈՒՅՑ</a></li>
-								<li class="bck_color"><a>ԱՌԱՎՈՏՅԱՆ ԾՐԱԳԻՐ</a></li>
-								<li class="bck_color"><a>ՑԵՐԵԿԱՅԻՆ ԾՐԱԳԻՐ</a></li>
-								<li class="bck_color"><a>ԵՐԵԿՈՅԱՆ ԾՐԱԳԻՐ></a></li>
-								<li class="bck_color"><a>ԻնՉՊԵՍ ԼՍԵԼ</a></li>
+								<a href=""><li class="bck_color">ՌԱԴԻՈՀԱՂՈՐԴՈՒՄՆԵՐԻ ԺԱՄԱՆԱԿԱՑՈՒՅՑ</li></a>
+								<a href=""><li class="bck_color">ԱՌԱՎՈՏՅԱՆ ԾՐԱԳԻՐ</li></a>
+								<a href=""><li class="bck_color">ՑԵՐԵԿԱՅԻՆ ԾՐԱԳԻՐ</li></a>
+								<a href=""><li class="bck_color">ԵՐԵԿՈՅԱՆ ԾՐԱԳԻՐ></li></a>
+								<a href=""><li class="bck_color">ԻնՉՊԵՍ ԼՍԵԼ</li></a>
 							</ul>
 						</div>
 					</div>
@@ -363,5 +362,7 @@
 			</div>
 	    </footer>
 	    <!-- footer end -->
+
+        <script src="../js/azatutyun.js"></script>
 	</body>
 </html>
