--- a/html/signup.html
+++ b/html/signup.html
@@ -104,24 +104,11 @@
 					</div>
             	    <!-- Dropdown in header end -->
             	<!-- Button with JS begin -->    
-				<a href="javascript:void(0);" class="icon" onclick="showHideNavbaroptions()">
+				<a href="javascript:void(0);" class="icon">
 				    <i class="fa fa-bars"></i>
 				</a>
             	</div>
-            	<script>
-					function showHideNavbaroptions() {
-					    var navbar_options = document.getElementById("myNavbar");
-					    var hidden = navbar_options.classList.contains("hidden_block");
-
-					    if (hidden) {
-					    	console.log('Show Navbar');
-					    	navbar_options.className = "navbar_items_hover responsive";
-					    } else {
-					        console.log("Hide Navbar");
-					    	navbar_options.className = "navbar_items_hover hidden_block";
-					    }
-					}
-				</script>
+            	
 				<!-- Button with JS end -->    
             </div>
             <!-- navbar links end -->
@@ -240,6 +227,8 @@
 			</div>
 	    </footer>
 	    <!-- footer end -->
+
+	    <script src="../js/azatutyun.js"></script>
 	</body>
 </html>
 
